<resources>
    <string name="app_name">ClassDude</string>
    <string name="loginButton">Login</string>
    <string name="loginUsernameHint">Username</string>
    <string name="loginPassowrdHint">Password</string>
    <string name="loginReferSignIn">Create a new account</string>
    <string name="signUpNameHint">Name</string>
    <string name="signUpEmailHint">Email Address</string>
    <string name="signUpPasswordHint">Password</string>
    <string name="signUpUsernameHint">Username</string>
    <string name="signupButton">Sign Up</string>
    <string name="signUpReferLogin">I already have an account</string>
    <string name="signUpConfirmPasswordHint">Confirm Password</string>
    <string name="tooolbarMessage">Messages</string>

    <!-- Sample menu -->

    <!-- Drawer Items -->
    <string name="drawer_item_first">First item</string>
    <string name="drawer_item_second">Second item</string>
    <string name="drawer_item_third">Third item</string>
    <string name="drawer_item_fourth">Fourth item</string>
    <string name="drawer_item_fifth">Fifth item</string>
    <string name="drawer_item_sixth">Sixth item</string>
    <string name="drawer_item_seventh">Seventh item</string>

</resources>
